fix: userSeq 데이터타입 변경2